# smart_deck_maker

./: .gitignore  README.md  conftest.py  deck.apkg  pyproject.toml
.github/workflows/: ci.yml
smartdeck/: __init__.py  cli.py  gui.py
smartdeck/deck/: __init__.py  builder.py  excerpt.py
smartdeck/extract/: __init__.py  epub.py  pdf.py
smartdeck/ingest/: __init__.py  apkg.py  live.py
smartdeck/nlp/: __init__.py  processing.py
smartdeck/utils/: pagespec.py
smartdeck/vault/: __init__.py  db.py
tests/: test_builder.py  test_cli_diff.py  test_cli_sync_apkg_remove.py  test_db.py  test_db_more.py  test_db_remove_more.py  test_excerpt.py  test_extract.py  test_gui.py  test_ingest_apkg_sync.py  test_ingest_sync_stub.py  test_nlp_more.py  test_pagespec.py  test_pagespec_more.py  test_processing.py  test_spacy_model_selection.py
tests/assets/: sample.epub
tests/integration/: test_cli_build.py
